# GPT-SoVITS

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
GPT_SoVITS/: process_ckpt.py  s1_train.py
GPT_SoVITS/AR/data/: dataset.py
GPT_SoVITS/TTS_infer_pack/: TTS.py  TextPreprocessor.py
GPT_SoVITS/feature_extractor/: cnhubert.py
GPT_SoVITS/prepare_datasets/: 1-get-text.py  2-get-hubert-wav32k.py  3-get-semantic.py
GPT_SoVITS/text/: cleaner.py
GPT_SoVITS/text/LangSegmenter/: langsegmenter.py
docs/cn/: README.md
docs/ja/: README.md
docs/superpowers/plans/: 2026-04-18-cli-first-training-loop.md
gsv_cli/: __main__.py  app.py  config.py  infer.py  paths.py  prep.py  separate.py  subprocesses.py  train.py  versions.py  wiki.py
tests/: test_cli_entrypoints.py  test_config.py  test_infer.py  test_infer_imports.py  test_language_frontend.py  test_no_gui_runtime.py  test_packaging.py  test_prep.py  test_separate.py  test_train.py  test_versions.py  test_wiki_publisher.py
tools/: my_utils.py
tools/asr/: config.py  fasterwhisper_asr.py
wiki/: Home.md  _Sidebar.md
wiki/en/: 1-overview.md  2-system-architecture.md  3-user-interfaces.md  4-text-processing.md  5-data-preparation.md  6-model-training.md  7-inference-and-deployment.md  8-utilities-and-supporting-systems.md
wiki/en/1-overview/: 1.1-installation-and-setup.md  (+2 more)
wiki/zh/: 1-overview.md  2-system-architecture.md  3-user-interfaces.md  4-text-processing.md  5-data-preparation.md  6-model-training.md  7-inference-and-deployment.md  8-utilities-and-supporting-systems.md
(+54 files in other folders)
